--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,11 @@
             <version>4.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jtattoo</groupId>
+            <artifactId>JTattoo</artifactId>
+            <version>1.6.8</version>
+        </dependency>
+
     </dependencies>
 </project>
